--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -19,10 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CityConnect"
         tools:targetApi="31">
+
         <activity
-            android:name=".qrscanner"
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
-            android:theme="@style/AppTheme">
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,14 +31,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:label="@string/title_activity_login"/>
-
-        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"/>
+        <activity
+        android:name=".qrscanner"
+        android:exported="true"
+        android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
