--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:theme="@style/Theme.CityConnect"
         tools:targetApi="31">
         <activity
+            android:name=".ComplainRate"
+            android:exported="false" />
+        <activity
             android:name=".ComplainMain"
             android:exported="true">
             <intent-filter>
@@ -31,8 +34,7 @@
         <activity
             android:name=".qrscanner"
             android:exported="true"
-            android:theme="@style/AppTheme"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
