--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -21,25 +21,31 @@
         tools:targetApi="31">
         <activity
             android:name=".ReportForm"
-            android:exported="false" />
+            android:exported="true" />
+
+
         <activity
             android:name=".ComplainForm"
-            android:exported="false" />
+            android:exported="true" />
+
         <activity
             android:name=".PopRate"
-            android:exported="false" />
-        <activity
-            android:name=".ComplainRate"
-            android:exported="false" />
-        <activity
-            android:name=".ComplainMain"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ComplainRate"
+            android:exported="true" />
+
+        <activity
+            android:name=".ComplainMain"
+            android:exported="true"/>
+
         <activity
             android:name=".qrscanner"
             android:exported="true"
