--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.bills.BillSelectionActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
