--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -19,23 +21,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CityConnect"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
+        <!-- Add your meta-data here -->
 
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".MainPage"
+            android:exported="true" />
+
+        <activity
+            android:name=".data.InsertUser"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui.MapsActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-        android:name=".MainPage"
-        android:exported="true" />
-        <activity
-            android:name=".data.InsertUser"
-            android:exported="true"/>
 
     </application>
 
