--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ composeBom = "2023.08.00"
 activity = "1.8.0"
 playServicesMlkitBarcodeScanning = "18.3.0"
 volley = "1.2.1"
+preferenceKtx = "1.2.1"
 
 [libraries]
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
@@ -48,6 +49,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 play-services-mlkit-barcode-scanning = { group = "com.google.android.gms", name = "play-services-mlkit-barcode-scanning", version.ref = "playServicesMlkitBarcodeScanning" }
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
+androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
