--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,6 +15,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CityConnect"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.payments.CheckoutActivity"
+            android:exported="true"
+            android:label="@string/title_activity_checkout"
+            android:theme="@style/Theme.CityConnect">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- This element is required to enable Google Pay in your app. -->
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
 
         <activity
             android:name=".ui.login.LoginActivity"
@@ -27,7 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.qrscanner.zxinglibrary.QrCodeMain"
             android:exported="true">
@@ -37,16 +51,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
         <activity
-            android:name =".ui.qrscanner.zxinglibrary.HelperActivity"
+            android:name=".ui.qrscanner.zxinglibrary.HelperActivity"
             android:label="@string/helper_activity" />
-
-
     </application>
 
 </manifest>
