--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ activity = "1.8.0"
 playServicesMlkitBarcodeScanning = "18.3.0"
 volley = "1.2.1"
 preferenceKtx = "1.2.1"
+composePreviewRenderer = "0.0.1-alpha01"
 
 [libraries]
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
@@ -50,6 +51,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 play-services-mlkit-barcode-scanning = { group = "com.google.android.gms", name = "play-services-mlkit-barcode-scanning", version.ref = "playServicesMlkitBarcodeScanning" }
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
+compose-preview-renderer = { group = "com.android.tools.compose", name = "compose-preview-renderer", version.ref = "composePreviewRenderer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
