--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -15,31 +15,43 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/img_2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/img"
         android:supportsRtl="true"
         android:theme="@style/Theme.CityConnect"
         tools:targetApi="31" >
 
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true" />
-
-        <activity
-        android:name=".MainPage"
-        android:exported="true" />
-        <activity
-            android:name=".data.InsertUser"
-            android:exported="true"/>
-        <activity
-            android:name=".ComplainMain"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainPage"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui.MainBus"
+            android:exported="true" />
+        <activity
+            android:name=".data.InsertUser"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui.BuyTickets"
+            android:exported="true"/>
+
+        <activity android:name=".ui.SpecificParkingPage" />
+        <activity android:name=".ui.MapsActivity" />
+
+        <activity
+            android:name=".ComplainMain"
+            android:exported="true">
         </activity>
     </application>
 
