--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ volley = "1.2.1"
 carUiLib = "2.6.0"
 playServicesLocation = "21.2.0"
 swiperefreshlayout = "1.1.0"
+preferenceKtx = "1.2.1"
 
 [libraries]
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
@@ -54,6 +55,7 @@ volley = { group = "com.android.volley", name = "volley", version.ref = "volley"
 car-ui-lib = { group = "com.android.car.ui", name = "car-ui-lib", version.ref = "carUiLib" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
+androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
