--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -56,6 +56,21 @@
             android:name=".ComplainMain"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".ui.qrscanner.zxinglibrary.QrCodeMain"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ui.qrscanner_parking.zxinglibrary.QrCodeMain"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation" />
+        <activity
+            android:name=".ui.qrscanner.zxinglibrary.HelperActivity"
+            android:label="@string/helper_activity" />
     </application>
 
 </manifest>
