Combined with bill_section
Co-Authored-By: zormpalas <118913235+zormpalas@users.noreply.github.com>

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
 
         <activity android:name=".ui.SpecificParkingPage" />
         <activity android:name=".ui.MainParking" />
+        <activity
+            android:name=".ui.bills.BillSelectionActivity"
+            android:exported="true" />
 
         <activity
             android:name=".ComplainMain"
