--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
             </intent-filter>
 
         </activity>
+        <activity
+            android:name=".ComplainManageMain"
+            android:exported="true" >
+
+
+        </activity>
 
         <activity
             android:name=".MainPage"
