--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 Submit 2/~$bustness-diagrams-v0.1.docx
 Submit 2/~WRL0144.tmp
 Submit 2/~$main-model-v0.2.docx
+Submit 4/~$am-plan-v1.0.docx
+Submit 4/~$e-Cases-v1.0.docx
+Submit 4/~$oject-description-v1.0.docx
