Class Diagram Updated
Co-Authored-By: eliasandronicou <21330545+eliasandronicou@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Submit 2/~$main-model-v0.2.docx
 Submit 4/~$am-plan-v1.0.docx
 Submit 4/~$e-Cases-v1.0.docx
 Submit 4/~$oject-description-v1.0.docx
+Submit 4/~$oject-plan-v1.0.docx
