--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Submit 4/~$am-plan-v1.0.docx
 Submit 4/~$e-Cases-v1.0.docx
 Submit 4/~$oject-description-v1.0.docx
 Submit 4/~$oject-plan-v1.0.docx
+Submit 4/~$ass-diagram-v1.0.docx
+Submit 4/~$main-model-v1.0.docx
+Submit 4/~$oject-code-v1.0.docx
